--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,11 @@
 {% extends 'base.html' %}
 
 {% block page_title %}Dashboard - {% endblock %}
+
+{% block content %}
+	<ul>
+	{% for payment in payments %}
+		<li>{{ payment }}</li>
+	{% endfor %}
+	</ul>
+{% endblock %}
