--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
 						<a class="brand" href="{% url dashboard %}">{{ APP_TITLE }}</a>
 						<ul class="nav">
 							<li{% if section == 'dashboard' %} class="active"{% endif %}><a href="{% url dashboard %}">{% trans 'Dashboard' %}</a></li>
+							<li{% if section == 'create_payment' %} class="active"{% endif %}><a href="{% url create_payment %}">{% trans 'Create Payment' %}</a></li>
 						</ul>
 					</div>
 				</nav>
