--- a/templates/create_payment.html
+++ b/templates/create_payment.html
@@ -8,7 +8,7 @@
 	{{ form.as_bootstrap|safe }}
 	<div class="control-group">
 		<div class="controls">
-			<button class="btn" type="submit">{% trans 'Submit' %}</button>
+			<button class="btn btn-primary" type="submit">{% trans 'Submit' %}</button>
 		</div>
 	</div>
 </form>
