--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,22 +9,22 @@
 		{% trans 'Upcoming payments' %}
 		<a class="btn btn-primary pull-right" href="{% url create_payment %}">{% trans 'Create new payment' %}</a>
 	</p>
-	<table class="table table-striped table-bordered">
+	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr>
-				<th>Title</th>
-				<th class="tr">Amount</th>
-				<th class="tr">Start date</th>
-				<th class="tr">Next payment</th>
+				<th class="title">Title</th>
+				<th class="amount tr">Amount</th>
+				<th class="start-date tr">Start date</th>
+				<th class="next-payment tr">Next payment</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for payment in payments %}
 			<tr>
-				<td>{{ payment.title }}</td>
-				<td class="tr">{{ payment.amount|floatformat:2 }}</td>
-				<td class="tr">{{ payment.start_date|date:"d N Y" }}</td>
-				<td class="tr">{{ payment.get_next_payment|date:"d N Y" }}</td>
+				<td class="title">{{ payment.title }}</td>
+				<td class="amount tr">{{ payment.amount|floatformat:2 }}</td>
+				<td class="start-date tr">{{ payment.start_date|date:"d N Y" }}</td>
+				<td class="next-payment tr">{{ payment.get_next_payment|date:"d N Y" }}</td>
 			</tr>
 			{% endfor %}
 		</tbody>
