--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
 	<h1>{% trans 'Dashboard' %}</h1>
 	<p class="lead clearfix">
 		{% trans 'Upcoming payments' %}
-		<a class="btn btn-primary pull-right" href="{% url create_payment %}">{% trans 'Create new payment' %}</a>
+		<a class="btn btn-primary pull-right" href="{% url 'create_payment' %}">{% trans 'Create new payment' %}</a>
 	</p>
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
