--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,7 @@
 		<title>{% block page_title %}{% endblock %}{{ APP_TITLE }}</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css">
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-responsive.min.css">
-		<link rel="stylesheet" href="{{ STATIC_URL }}css/main.css">
-		<script src="{{ STATIC_URL }}js/libs/modernizr-2.6.2.min.js"></script>
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/styles.css">
 	</head>
 	<body>
 		<!--[if lt IE 7]>
@@ -35,7 +30,7 @@
 			</div>
 		</header>
 
-		<div id="content">
+		<div class="content">
 			<div class="container">{% block content %}{% endblock %}</div>
 		</div>
 
@@ -45,9 +40,8 @@
 			</div>
 		</footer>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/libs/jquery-1.8.2.min.js"><\/script>')</script>
-		<script src="{{ STATIC_URL }}js/libs/bootstrap.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
