--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,10 @@
 	<h1>{% trans 'Dashboard' %}</h1>
 	<p class="lead clearfix">
 		{% trans 'Upcoming payments' %}
-		<a class="btn btn-primary pull-right" href="{% url 'create_payment' %}">{% trans 'Create new payment' %}</a>
+		<a class="btn btn-primary pull-right" href="{% url 'create_payment' %}">
+			<i class="icon-plus icon-white"></i>
+			{% trans 'Create new payment' %}
+		</a>
 	</p>
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
@@ -27,7 +30,7 @@
 				<td class="start-date tr">{{ payment.start_date|date:"d N Y" }}</td>
 				<td class="next-payment tr">{{ payment.get_next_payment|date:"d N Y" }}</td>
 				<td class="actions tr">
-					<a class="btn btn-primary" href="{% url 'edit_payment' payment.id %}">Edit</a>
+					<a class="btn" href="{% url 'edit_payment' payment.id %}"><i class="icon-pencil"></i> Edit</a>
 				</td>
 			</tr>
 			{% endfor %}
